Fixed date fields being not wide enough to display all date strings and spacing between form buttons

--- a/omod/src/main/webapp/resources/styles/kenyaui.css
+++ b/omod/src/main/webapp/resources/styles/kenyaui.css
@@ -102,14 +102,24 @@ span.ke-field-label, label.ke-field-label {
 	margin-top: 5px;
 }
 
+.ke-form-buttons .ke-button {
+	margin: 2px;
+}
+
+input.hasDatepicker {
+	width: 105px;
+}
+
+
 /***** Buttons *****/
 
 .ke-control {
 	color: #444;
 	background-color: #EEEEEE;
 	padding: 5px;
+	margin: 0;
 	text-decoration: none;
-	overflow: auto
+	overflow: auto;
 }
 
 .ke-button {
